Blender crashes using Irradiance Volume with Curve inside #70107

Closed
opened 2019-09-20 11:17:58 +02:00 by Simeon Conzendorf · 6 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-19 20:35, hash: c8df6f2cf9
Worked: (optional)

Exact steps for others to reproduce the error

Add Light Probe -> Irradiance Volume
Add Curve -> Circle
hit F3 and search "Bake Light Cache"
CRASH

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-19 20:35, hash: `c8df6f2cf9` Worked: (optional) **Exact steps for others to reproduce the error** Add Light Probe -> Irradiance Volume Add Curve -> Circle hit F3 and search "Bake Light Cache" CRASH

Added subscriber: @SimeonConzendorf

Added subscriber: @SimeonConzendorf
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, this was still working in 1e375ab5a1, bisecting...

Can confirm, this was still working in 1e375ab5a1, bisecting...
Clément Foucault was assigned by Philipp Oeser 2019-09-20 12:33:23 +02:00
Member

Caused by 3a08153d7a

1   ??                                                           0x400b3ec1     
2   ??                                                           0x7fffc9be4154 
3   ??                                                           0x7fffc9be4e5c 
4   ??                                                           0x7fffc9be507b 
5   ??                                                           0x7fffc9beb21f 
6   ??                                                           0x7fffc974efb1 
7   GPU_draw_list_submit               gpu_batch.c          865  0x82536f6      
8   draw_call_batching_flush           draw_manager_exec.c  1080 0x388bbd8      
9   draw_call_batching_finish          draw_manager_exec.c  1182 0x388ca62      
10  draw_shgroup                       draw_manager_exec.c  1330 0x388d02a      
11  drw_draw_pass_ex                   draw_manager_exec.c  1378 0x388d246      
12  DRW_draw_pass                      draw_manager_exec.c  1423 0x388d3fe      
13  EEVEE_shadows_draw_cubemap         eevee_shadows_cube.c 221  0x38cae58      
14  EEVEE_shadows_draw                 eevee_shadows.c      385  0x38c892f      
15  lightbake_render_scene_face        eevee_lightprobes.c  907  0x38b8d72      
16  render_cubemap                     eevee_lightprobes.c  850  0x38b8ad7      
17  EEVEE_lightbake_render_scene       eevee_lightprobes.c  935  0x38b8eb1      
18  eevee_lightbake_render_grid_sample eevee_lightcache.c   953  0x38b3b86      
19  DRW_custom_pipeline                draw_manager.c       2160 0x38809ea      
20  lightbake_do_sample                eevee_lightcache.c   1160 0x38b4c9d 
Caused by 3a08153d7a ``` 1 ?? 0x400b3ec1 2 ?? 0x7fffc9be4154 3 ?? 0x7fffc9be4e5c 4 ?? 0x7fffc9be507b 5 ?? 0x7fffc9beb21f 6 ?? 0x7fffc974efb1 7 GPU_draw_list_submit gpu_batch.c 865 0x82536f6 8 draw_call_batching_flush draw_manager_exec.c 1080 0x388bbd8 9 draw_call_batching_finish draw_manager_exec.c 1182 0x388ca62 10 draw_shgroup draw_manager_exec.c 1330 0x388d02a 11 drw_draw_pass_ex draw_manager_exec.c 1378 0x388d246 12 DRW_draw_pass draw_manager_exec.c 1423 0x388d3fe 13 EEVEE_shadows_draw_cubemap eevee_shadows_cube.c 221 0x38cae58 14 EEVEE_shadows_draw eevee_shadows.c 385 0x38c892f 15 lightbake_render_scene_face eevee_lightprobes.c 907 0x38b8d72 16 render_cubemap eevee_lightprobes.c 850 0x38b8ad7 17 EEVEE_lightbake_render_scene eevee_lightprobes.c 935 0x38b8eb1 18 eevee_lightbake_render_grid_sample eevee_lightcache.c 953 0x38b3b86 19 DRW_custom_pipeline draw_manager.c 2160 0x38809ea 20 lightbake_do_sample eevee_lightcache.c 1160 0x38b4c9d ```

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 0ac7b51dee

This issue was referenced by 0ac7b51dee12e5b3657a2ff0b35c1490fbf8cc6b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70107
No description provided.