Fix T70107 EEVEE: Crash using Irradiance Volume with Curve inside

This was more of a general nvidia driver bug. Was caused by a
drawcall that had 0 vertex count. This worked in normal drawcalls
but not in indirect drawcalls.